--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -14,6 +14,11 @@
 
     <body>
         <header>
+           <img src="">
+           <section>
+               <h1>The Weather Site</h1>
+               <div>The Weather Site Catch phrase/motto</div>
+           </section>
            
         </header>
         <nav>
@@ -28,34 +33,21 @@
         </nav>
         
         <main>
-            <section>
-                <h2 class="name">Site Name</h2>
-                <p>The name of the website will be mistdrizzle.com</p>
-            </section>
+            <div>
+                <h2>Hero image/Weather Summary</h2>  
+            </div>
 
-            <section>
-                <h2 class="purpose">Site Purpose</h2>
-                <p>The purpose of this website is to provide the community with the most 
-                    up-to-date information on the weather in different parts of Venezuela, 
-                    and thus allow citizens to make decisions that are prudent as the case 
-                    may be, such as what clothes to wear, What places can you visit, and what 
-                    type of activities to carry out and if this affects your work or study hours, 
-                    the information provided is easy to access since the website is easy to 
-                    access and navigate by anyone who can handle the internet, It will have 
-                    images of the places, videos and recommendations for the user.</p>
-            </section>
+            <div>
+                <h2>5 day forecast</h2>
+            </div>
 
-            <section>
-                <h2 class="domain">Domain Name</h2>
-                <p>The domain name is mistdrizzle.com for $14.95 per year</p>
-                <img src="images/imgdomain.png" width="25" height="400">
-            </section>
+            <div>
+                <h2>Article</h2>   
+            </div>
 
-            <section>
-                <h2 class="logo">Website Logo</h2>
-                <p>The logo will be this</p>
-                <img src="images/logo2.png" id="logo" width="25" height="200">
-            </section>
+            <div>
+                <h2>Contact Information</h2>
+            </div>
   
         </main>
 
