--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -52,8 +52,7 @@
         </main>
 
         <footer>
-            &#169;<span id="fullYear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
-            <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> |<script src="js/lesson3.js"></script>
+            &#169;| Weather Site | Wilker Pacheco | Current day: <span id="design"></span>| <script src="js/lesson4.js"></script>
          </footer>
 
     </body>
