--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -14,9 +14,9 @@
 
     <body>
         <header>
-           <img src="">
-           <section>
-               <h1>The Weather Site</h1>
+           <img src="images/logo2.png" height="25"alt="logo">
+           <section id="encabezado">
+               <h1>Mistdrizzle</h1>
                <div>The Weather Site Catch phrase/motto</div>
            </section>
            
@@ -52,7 +52,7 @@
         </main>
 
         <footer>
-            &#169;| Weather Site | Wilker Pacheco | Current day: <span id="design"></span>| <script src="js/lesson4.js"></script>
+            &#169;| Weather Site | Wilker Pacheco | <span id="design"></span>| <script src="js/lesson4.js"></script>
          </footer>
 
     </body>
