--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -14,10 +14,10 @@
 
     <body>
         <header>
-           <img src="images/logo2.png" height="25"alt="logo">
+           <img src="images/logo2.png" alt="logo">
            <section id="encabezado">
-               <h1>Mistdrizzle</h1>
-               <div>The Weather Site Catch phrase/motto</div>
+               <h1 id="titulo">Mistdrizzle</h1>
+               <div id="slogan">The Weather Site Catch phrase/motto</div>
            </section>
            
         </header>
