--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -22,7 +22,8 @@
            
         </header>
         <nav>
-            <ul>
+            <button onclick="toggleMenu()">&#9776;</button> 
+            <ul id="mostrar" class="hide">
               <li><a href="preston-4.html">Home</a></li>
               <li><a href="">Preston</a></li>
               <li><a href="">Soda Springs</a></li>
@@ -33,19 +34,19 @@
         </nav>
         
         <main>
-            <div>
+            <div class="contenedor">
                 <h2>Hero image/Weather Summary</h2>  
             </div>
 
-            <div>
+            <div class="contenedor">
                 <h2>5 day forecast</h2>
             </div>
 
-            <div>
+            <div class="contenedor">
                 <h2>Article</h2>   
             </div>
 
-            <div>
+            <div class="contenedor" >
                 <h2>Contact Information</h2>
             </div>
   
