--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Website Planning Document</title>
         <meta name="description" content="Preston Page">
+        <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href= "css/small.css" rel= "stylesheet" >
