--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -39,11 +39,16 @@
         <main>
             <h2 id="ciudad">Preston, Idaho</h2>
             <div class="contenedor">
-                <h2>Hero image/Weather Summary</h2>  
+                <img id="hero"  src="images/Preston Idaho.jpg" height="400"  alt="Waterfall image">
             </div>
 
-            <div class="contenedor">
-                <h2>5 day forecast</h2>
+            <div id="summary">
+                <h2 id="clima">Weather Summary</h2>
+                <p>Currently: Sunny</p>
+                <p>Wind Chill: °F</p>
+                <p>High: 76.1°F</p>
+                <p>Wind Speed: 8mph</p>
+                <p>Humidity:69%</p>
             </div>
 
             <div class="contenedor">
