--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -38,7 +38,7 @@
         
         <main>
             <h2 id="ciudad">Preston, Idaho</h2>
-            <div class="contenedor">
+            <div>
                 <img id="hero"  src="images/Preston Idaho.jpg" height="400"  alt="Waterfall image">
             </div>
 
@@ -51,18 +51,67 @@
                 <p>Humidity:69%</p>
             </div>
 
-            <div class="contenedor">
-                <h2>Article</h2>   
+            <div id="five">
+                <h2>5 Day forecast</h2> 
+                <table>
+                    <tr>
+                        <th>
+                           Wed
+                        </th>
+                        <th>
+                            Thu
+                        </th>
+                        <th>
+                            Fry
+                        </th>
+                        <th>
+                            Sat
+                        </th>
+                        <th>
+                            Sun
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            89°F
+                        </td>
+                        <td>
+                            91°F
+                        </td>
+                        <td>
+                            87°F
+                        </td>
+                        <td>
+                            93°F
+                        </td>
+                        <td>
+                            90°F
+                        </td>
+                    </tr>
+                </table>  
             </div>
 
-            <div class="contenedor" >
-                <h2>Contact Information</h2>
+            <div id="one">
+                <p id="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, ea labore 
+                    soluta modi sunt iure, quia eos distinctio quas quos quis ex culpa, 
+                    explicabo eius similique incidunt facilis corrupti magni.</p>  
+                    <img id="articulo"  src="images/Ciudad Preston.jpg" alt="City image">
             </div>
+            
   
         </main>
 
         <footer>
-            &#169;| Weather Site | Wilker Pacheco | <span id="design"></span>| <script src="js/lesson5.js"></script>
+            <div id="Information">
+                <h2>Contact Information</h2>
+                <p>Phone Number: 04145560383</p>
+                <p>Website: <a id="web" href="https://www.prestonidaho.net/" target = "_blank">https://www.prestonidaho.net/</a></p>
+                <img src="images/Instagram.png" width="35" alt="icon instagram">
+                <img src="images/twitter1.png" width="35" alt="icon twitter">
+                <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
+            </div>
+            <img id="contacto" src="images/mapa.png" alt="mapa">
+           <div id="pie"> &#169;| Weather Site | Wilker Pacheco | <span id="design"></span>| <script src="js/lesson5.js"></script></div>
          </footer>
 
     </body>
