--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -25,7 +25,7 @@
         <nav>
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
-              <li><a href="preston-4.html">Home</a></li>
+              <li class="active"><a href="preston-4.html">Home</a></li>
               <li><a href="">Preston</a></li>
               <li><a href="">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
