--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -111,7 +111,7 @@
                 <a href="https://www.facebook.com/City-of-Preston-Idaho-1703312059923493/?fref=ts" target="_blank"><img src="images/facebook.png" width="35" alt="icon facebook"></a>  
             </div>
             <img id="contacto" src="images/mapa.png" alt="mapa">
-           <div id="pie"> &#169;| Weather Site | Wilker Pacheco | <span id="design"></span>| <script src="js/lesson5.js"></script></div>
+           <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
          </footer>
 
     </body>
