--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -15,6 +15,16 @@
 
     <body>
         <header>
+            <div id="feedback">
+                <strong> "Saturday = Jaboticabal Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion."</strong>
+             </div>
+             <script>
+                 console.log(getDia());
+                
+                 if(getDia()==6){
+                     document.getElementById("feedback").style.display = "block"; 
+                 }
+             </script>
            <img src="images/logo2.png" alt="logo">
            <section id="encabezado">
                <h1 id="titulo">Mistdrizzle</h1>
