--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -14,17 +14,9 @@
     </head>
 
     <body>
+        <div id="feedback">Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.</div> 
+        <script src="js/message.js"></script>
         <header>
-            <div id="feedback">
-                <strong> "Saturday = Jaboticabal Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion."</strong>
-             </div>
-             <script>
-                 console.log(getDia());
-                
-                 if(getDia()==6){
-                     document.getElementById("feedback").style.display = "block"; 
-                 }
-             </script>
            <img src="images/logo2.png" alt="logo">
            <section id="encabezado">
                <h1 id="titulo">Mistdrizzle</h1>
@@ -63,7 +55,7 @@
 
             <div id="five">
                 <h2>5 Day forecast</h2> 
-                <table>
+                <table id="tabla">
                     <tr>
                         <th>
                            Wed
