--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -53,9 +53,11 @@
                 <p>Humidity:69%</p>
             </div>
 
+            <h2>5 Day forecast</h2>
+
             <div id="five">
-                <h2>5 Day forecast</h2> 
-                <table id="tabla">
+                 
+                <table>
                     <tr>
                         <th>
                            Wed
