--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -96,9 +96,11 @@
             </div>
 
             <div id="one">
-                <p id="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, ea labore 
-                    soluta modi sunt iure, quia eos distinctio quas quos quis ex culpa, 
-                    explicabo eius similique incidunt facilis corrupti magni.</p>  
+                <p class="parrafo">by Wilker Pacheco</p>
+                <p class="parrafo">The city of Preston, Idaho was founded in 1900, with a population of 5,354, sits at an elevation of 4,718ft, and has many options for the family to enjoy.</p>
+                <p class="parrafo">Spring brings golfing at our 18-hole course, floating and kayaking down the beautiful Bear River, as well as fishing, boating, water-skiing or just camping at our 10 reservoirs. There are three swimming resorts close by and also a new swimming pool in town.</p>
+                <p class="parrafo">Winter brings the best snow and the most beautiful winter scenery. Snowmobiling and cross country skiing is great. You can travel down Mink Creek, Cub River, and even Logan Canyon and see the most beautiful winter wonderland ever, ending up at Bloomington or Bear Lake.</p>
+                <p class="parrafo">Preston is a vacationer’s dream. There’s always something to do.</p>  
                     <img id="articulo"  src="images/Ciudad Preston.jpg" alt="City image">
             </div>
             
