--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -41,7 +41,12 @@
         <main>
             <h2 id="ciudad">Preston, Idaho</h2>
             <div>
-                <img id="hero"  src="images/Preston Idaho.jpg" height="400"  alt="Waterfall image">
+                <picture>
+                    <source srcset="images/image lesson6 400.jpg" media="(min-width: 32.5em) and 
+                    (max-width: 63em)">
+                       <source srcset="images/image lesson6 600.jpg" media="(min-width:64em)">
+                    <img src="images/image lesson6 250px.jpg"  alt="Example">
+                </picture>
             </div>
 
             <div id="summary">
