--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -42,9 +42,9 @@
             <h2 id="ciudad">Preston, Idaho</h2>
             <div>
                 <picture>
-                    <source srcset="images/image lesson6 400.jpg" media="(min-width: 32.5em) and 
-                    (max-width: 63em)">
-                       <source srcset="images/image lesson6 600.jpg" media="(min-width:64em)">
+                    <source srcset="images/image lesson6 400.jpg" media="(min-width: 500px) and 
+                    (max-width: 799px)">
+                       <source srcset="images/image lesson6 600.jpg" media="(min-width: 800px)">
                     <img src="images/image lesson6 250px.jpg"  alt="Example">
                 </picture>
             </div>
