--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -41,11 +41,11 @@
         <main>
             <h2 id="ciudad">Preston, Idaho</h2>
             <div>
-                <picture>
-                    <source srcset="images/image lesson6 400.jpg" media="(min-width: 500px) and 
+                <picture id="hero">
+                    <source srcset="images/lesson6400.jpg" media="(min-width: 500px) and 
                     (max-width: 799px)">
-                       <source srcset="images/image lesson6 600.jpg" media="(min-width: 800px)">
-                    <img src="images/image lesson6 250px.jpg"  alt="Example">
+                       <source srcset="images/lesson6600.jpg" media="(min-width: 800px)">
+                    <img src="images/lesson6250.jpg"  alt="Example">
                 </picture>
             </div>
 
