--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -27,7 +27,7 @@
         <nav>
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
-              <li class="active"><a href="preston-4.html">Home</a></li>
+              <li class="active"><a href="https://byui.instructure.com/courses/125462/assignments/5028285?module_item_id=13623100" target="_blank">Home</a></li>
               <li><a href="">Preston</a></li>
               <li><a href="">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
