--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -42,12 +42,16 @@
             <h2 id="ciudad">Preston, Idaho</h2>
             <div>
                 <picture id="hero">
-                    <source srcset="images/lesson6medium.jpg" media="(min-width: 500px) and 
-                    (max-width: 799px)">
-                       <source srcset="images/lesson6large.jpg" media="(min-width: 800px)">
-                    <img src="images/image lesson6.jpg" alt="Example">
+                    <source srcset="images/lesson6medium.jpg" media="(min-width: 520px) and 
+                    (max-width: 1023px)">
+                       <source srcset="images/lesson6large.jpg" media="(min-width: 1024px)">
+                    <img src="images/image lesson6.jpg" alt="Example" id="primero">
                 </picture>
+                <p class="small">Small</p>
+                <p class="medium">Medium</p>
+                <p class="large">Large</p>
             </div>
+            
 
             <div id="summary">
                 <h2 id="clima">Weather Summary</h2>
