--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -56,8 +56,11 @@
             <div id="summary">
                 <h2 id="clima">Weather Summary</h2>
                 <p>Currently: Sunny</p>
-                <p>Wind Chill:<span id="windChill"></span> <script src="js/windChill.js"></script>°F</p>
-                <p>Temperature: <span id="temp">48.6</span>°F</p>
+                <p>Wind Chill:<span id="windChill"></span> <script src="js/windChill.js"></script> °F</p>
+                <script>
+                    document.getElementById("windChill").innerHTML = windChill(48, 8);
+                </script>
+                <p>Temperature: <span id="temp">48</span>°F</p>
                 <p>Wind Speed: <span id="speed">8</span>mph</p>
                 <p>Humidity:69%</p>
             </div>
