--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -7,7 +7,6 @@
         <meta name="description" content="Preston Page">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href= "css/small.css" rel= "stylesheet" >
         <link href= "css/medium.css" rel="stylesheet">
         <link href= "css/large.css" rel="stylesheet">
@@ -132,6 +131,11 @@
             <img id="contacto" src="images/mapa.png" alt="mapa">
            <div id="pie"> &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco | <span id="design"></span> <script src="js/lesson5.js"></script></div>
          </footer>
+         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+         <script>
+             WebFont.load({google:{families: ['Roboto', 'open']}});
+
+         </script>
 
     </body>
 
