--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -46,9 +46,13 @@
                        <source srcset="images/lesson6large.jpg" media="(min-width: 1024px)">
                     <img src="images/image lesson6.jpg" alt="Example" id="primero">
                 </picture>
-                <p class="small">Small</p>
-                <p class="medium">Medium</p>
-                <p class="large">Large</p>
+                
+                <section class="label" >
+                    <p id="large">Large</p>
+                    <p id="medium">Medium</p>
+                    <p id="small">Small</p>
+                </section>
+
                 <section id="summary">
                 <h2 id="clima">Weather Summary</h2>
                 <p>Currently: Sunny</p>
