--- a/Lesson 7/lazyload.html
+++ b/Lesson 7/lazyload.html
@@ -8,35 +8,34 @@
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
         <link href= "css/lazzy.css" rel= "stylesheet" >
-        >
+        
     </head>
 
     <body>
         <h1>Lazy Loading Images</h1>
 
         <picture>
-            
-
+            <img src="images/photo-1.jpg">
         </picture>
 
         <picture>
-
+            <img src="images/photo-2.jpg">
         </picture>
 
         <picture>
-
+            <img src="images/photo-3.jpg">
         </picture>
 
         <picture>
-
+            <img src="images/photo-4.jpg">
         </picture>
 
         <picture>
-
+            <img src="images/photo-5.jpg">
         </picture>
 
         <picture>
-
+            <img src="images/photo-6.jpg">
         </picture>
 
     </body>
