--- a/Lesson 7/lazyload.html
+++ b/Lesson 7/lazyload.html
@@ -15,27 +15,27 @@
         <h1>Lazy Loading Images</h1>
 
         <picture>
-            <img src='data/img/placeholder.png' data-src="images/photo-1.jpg">
+            <img src="images/placeholder.png" data-src="images/photo-1.jpg">
         </picture>
 
         <picture>
-            <img src='data/img/placeholder.png' data-src="images/photo-2.jpg">
+            <img src="images/placeholder.png" data-src="images/photo-2.jpg">
         </picture>
 
         <picture>
-            <img src='data/img/placeholder.png' data-src="images/photo-3.jpg">
+            <img src="images/placeholder.png" data-src="images/photo-3.jpg">
         </picture>
 
         <picture>
-            <img src='data/img/placeholder.png' data-src="images/photo-4.jpg">
+            <img src="images/placeholder.png" data-src="images/photo-4.jpg">
         </picture>
 
         <picture>
-            <img src='data/img/placeholder.png' data-src="images/photo-5.jpg">
+            <img src="images/placeholder.png" data-src="images/photo-5.jpg">
         </picture>
 
         <picture>
-            <img src='data/img/placeholder.png' data-src="images/photo-6.jpg">
+            <img src="images/placeholder.png" data-src="images/photo-6.jpg">
         </picture>
 
         <script src="js/lazy.js"></script>
