--- a/Lesson 7/preston-7.html
+++ b/Lesson 7/preston-7.html
@@ -41,17 +41,11 @@
             <h2 id="ciudad">Preston, Idaho</h2>
             <div id="herosum">
                 <picture id="hero">
-                    <source srcset="images/lesson6medium.jpg" media="(min-width: 520px) and 
+                    <source srcset="images/Prestonmedium.jpg" media="(min-width: 520px) and 
                     (max-width: 1023px)">
-                       <source srcset="images/lesson6large.jpg" media="(min-width: 1024px)">
-                    <img src="images/image lesson6.jpg" alt="Example" id="primero">
+                       <source srcset="Images/Prestonlesson71.jpg" media="(min-width: 1024px)">
+                    <img src="images/Prestonlesson7.jpg" alt="Example" id="primero">
                 </picture>
-                
-                <section class="label" >
-                    <p id="large">Large</p>
-                    <p id="medium">Medium</p>
-                    <p id="small">Small</p>
-                </section>
 
                 <section id="summary">
                 <h2 id="clima">Weather Summary</h2>
