--- a/Lesson 7/preston-7.html
+++ b/Lesson 7/preston-7.html
@@ -43,7 +43,7 @@
                 <picture id="hero">
                     <source srcset="images/Prestonmedium.jpg" media="(min-width: 520px) and 
                     (max-width: 1023px)">
-                       <source srcset="Images/Prestonlesson71.jpg" media="(min-width: 1024px)">
+                       <source srcset="Images/Prestonlarge.jpg" media="(min-width: 1024px)">
                     <img src="images/Prestonlesson7.jpg" alt="Example" id="primero">
                 </picture>
 
