--- a/Lesson 7/gallery-7.html
+++ b/Lesson 7/gallery-7.html
@@ -39,47 +39,47 @@
 
         <main>
           <div id="galeria">
-            <figure class="imagen" id="fig1">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen1 200px.jpg" alt="Summer Montain">
                 <figcaption>Summer on the hill</figcaption>
             </figure>
 
-            <figure class="imagen" id="fig2">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen2 200px.jpg" alt="Summer Montain">
                 <figcaption>Cloudy valley</figcaption>
             </figure>
 
-            <figure class="imagen" id="fig3">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen3 200px.jpg" alt="Summer Montain">
                 <figcaption>Snowy mountains</figcaption>
             </figure>
 
-            <figure class="imagen" id="fig4">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen4 medium.jpg" alt="Summer Montain">
                 <figcaption>Hill in spring</figcaption>
             </figure>
 
-            <figure class="imagen" id="fig5">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen5 medium.jpg" alt="Summer Montain">
                 <figcaption>Electric storm</figcaption>
             </figure>
 
-            <figure class="imagen" id="fig6">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen6 medium.jpg" alt="Summer Montain">
                 <figcaption>The city under the snow</figcaption>
             </figure>
             
-            <figure class="imagen" id="fig7">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen7 large.jpg" alt="Summer Montain">
                 <figcaption>Rainbow over the field</figcaption>
             </figure>
 
-            <figure class="imagen" id="fig8">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen8 large.jpg" alt="Summer Montain">
                 <figcaption>Lightning strikes the earth</figcaption>
             </figure>
 
-            <figure class="imagen" id="fig9">
+            <figure class="imagen">
                 <img src="images/placeholder.png" data-src="imagesgaleria/imagen9 large.jpg" alt="Summer Montain">
                 <figcaption>Snow on red fruits</figcaption>
             </figure>
