--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li>LESSON 03:<a href="index.html">Website Planning</a></li>
       <li>LESSON 04:<a href="index.html">Preston Town Page</a></li>
       <li>LESSON 05:<a href="index.html">Preston Town Page II</a></li>
-      <li>LESSON 06:<a href="index.html">Responsive Images and Fonts</a></li>
+      <li>LESSON 06:<a href="https://midael1975.github.io/Lesson%206/preston-6.html">Responsive Images and Fonts</a></li>
       <li>LESSON 07:<a href="https://midael1975.github.io/Lesson 7/gallery-7.html" target="_blank">Gallery Page</a></li>
       <li>LESSON 08:<a href="index.html">Storm Center Page</a></li>
       <li>LESSON 09:<a href="index.html">Weather Site Homepage</a></li>
