--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li>LESSON 01:<a href="index.html">Assigment portal</a></li>
       <li>LESSON 02:<a href="index.html">Design Principles</a></li>
       <li>LESSON 03:<a href="index.html">Website Planning</a></li>
-      <li>LESSON 04:<a href="index.html">Preston Town Page</a></li>
+      <li>LESSON 04:<a href="https://midael1975.github.io/lesson4/preston-4.html">Preston Town Page</a></li>
       <li>LESSON 05:<a href="https://midael1975.github.io/Lesson%205/preston-5.html">Preston Town Page II</a></li>
       <li>LESSON 06:<a href="https://midael1975.github.io/Lesson%206/preston-6.html">Responsive Images and Fonts</a></li>
       <li>LESSON 07:<a href="https://midael1975.github.io/Lesson 7/gallery-7.html" target="_blank">Gallery Page</a></li>
