--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav>
     <ul>
       <li>LESSON 01:<a href="index.html">Assigment portal</a></li>
-      <li>LESSON 02:<a href="index.html">Design Principles</a></li>
+      <li>LESSON 02:<a href="https://midael1975.github.io/Lesson2/design-principles.html">Design Principles</a></li>
       <li>LESSON 03:<a href="https://midael1975.github.io/Lesson3/index.html">Website Planning</a></li>
       <li>LESSON 04:<a href="https://midael1975.github.io/lesson4/preston-4.html">Preston Town Page</a></li>
       <li>LESSON 05:<a href="https://midael1975.github.io/Lesson%205/preston-5.html">Preston Town Page II</a></li>
