--- a/Lesson 8/tablebuild.html
+++ b/Lesson 8/tablebuild.html
@@ -12,6 +12,10 @@
     </head>
 
     <body>
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+         <script>
+             WebFont.load({google:{families: ['Ubuntu', 'sans-serif']}});
+
+         </script>
     </body>
 </html>
