--- a/Lesson 8/tablebuild.html
+++ b/Lesson 8/tablebuild.html
@@ -12,6 +12,62 @@
     </head>
 
     <body>
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="3">ACME Wildwest</th>
+                </tr>
+            </thead>
+
+            <tfoot>
+                <tr>
+                    <td colspan="3">Compiled 12.20.2020 by bRauls</td>
+                </tr>
+            </tfoot>
+
+            <tbody>
+                <tr>
+                    <th>Period</th>
+                    <th>Sales</th>
+                    <th>Sales Goal</th>
+                </tr>
+
+                <tr>
+                    <td>August</td>
+                    <td>$3,590</td>
+                    <td>$4,000</td>
+                </tr>
+
+                <tr>
+                    <td>September</td>
+                    <td>$4,420</td>
+                    <td>$5,000</td>
+                </tr>
+
+                <tr>
+                    <td>October</td>
+                    <td>$4,870</td>
+                    <td>$5,000</td>
+                </tr>
+
+                <tr>
+                    <td>November</td>
+                    <td>$8,610</td>
+                    <th>$7,500</th>
+                </tr>
+
+                <tr>
+                    <td id="italic">Black Friday</td>
+                    <td colspan="2">$3,200</td>
+                </tr>
+
+                <tr>
+                    <td>December</td>
+                    <td>$6,820</td>
+                    <td>$7,500</td>
+                </tr>
+            </tbody>
+        </table>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
          <script>
              WebFont.load({google:{families: ['Ubuntu', 'sans-serif']}});
