--- a/Lesson 8/tablebuild.html
+++ b/Lesson 8/tablebuild.html
@@ -53,11 +53,11 @@
                 <tr>
                     <td>November</td>
                     <td>$8,610</td>
-                    <th>$7,500</th>
+                    <td class="nov">$7,500</td>
                 </tr>
 
                 <tr>
-                    <td id="italic">Black Friday</td>
+                    <td><i>Black Friday</i></td>
                     <td colspan="2">$3,200</td>
                 </tr>
 
