--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   </section>
   <nav>
     <ul>
-      <li>LESSON 01:<a href="index.html">Assigment portal</a></li>
+      <li>LESSON 01:<a href="index.html">Assignment portal</a></li>
       <li>LESSON 02:<a href="https://midael1975.github.io/Lesson2/design-principles.html">Design Principles</a></li>
       <li>LESSON 03:<a href="https://midael1975.github.io/Lesson3/index.html">Website Planning</a></li>
       <li>LESSON 04:<a href="https://midael1975.github.io/lesson4/preston-4.html">Preston Town Page</a></li>
       <li>LESSON 05:<a href="https://midael1975.github.io/Lesson%205/preston-5.html">Preston Town Page II</a></li>
       <li>LESSON 06:<a href="https://midael1975.github.io/Lesson%206/preston-6.html">Responsive Images and Fonts</a></li>
       <li>LESSON 07:<a href="https://midael1975.github.io/Lesson 7/gallery-7.html" target="_blank">Gallery Page</a></li>
-      <li>LESSON 08:<a href="https://midael1975.github.io/Lesson%208/tablebuild.html">Table Assignment</a></li>
+      <li>LESSON 08:<a href="https://midael1975.github.io/Lesson%208/tablebuild.html" target="_blank">Table Assignment</a></li>
       <li>LESSON 09:<a href="index.html">Weather Site Homepage</a></li>
       <li>LESSON 10:<a href="index.html">Preston Weather Api</a></li>
       <li>LESSON 11:<a href="index.html">Weather site</a></li>
