--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -48,6 +48,7 @@
                     </label><br>
                     <label>Last Name:<br>
                         <input type="text" name="last" class="unico" required pattern="[A-Za-z]{5,10}">
+                        <span class="validity"></span>
                     </label><br>
                     <label>Zip Code:<br>
                         <input type="text" name="zip" class="unico" pattern="(\d{5}([\-]\d{4})?)" 
