--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -51,13 +51,13 @@
                         <span class="validity"></span>
                     </label><br>
                     <label>Zip Code:<br>
-                        <input type="text" name="zip" class="unico" pattern="(\d{5}([\-]\d{4})?)" 
+                        <input type="text" name="zip" class="unico" pattern="(\d{5}([\-]\d{4})?)" required 
                         autocomplete="shipping postal-codep"></label><br>
                     <label>Phone:<br>
-                        <input type="tel" name="phone" class="unico" placeholder="0414-556-0383">
+                        <input type="tel" name="phone" class="unico" placeholder="0414-556-0383" required>
                     </label><br>
                     <label>eMail:<br>
-                        <input type="email" name="email" class="unico" placeholder="user@email.org"></label><br>
+                        <input type="email" name="email" class="unico" required placeholder="user@email.org"></label><br>
                     
                 </fieldset>
 
