--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -46,7 +46,7 @@
                         <input type="text" name="firts" class="unico" required pattern="[A-Za-z]{5,10}">
                         <span class="validity"></span>
                     </label><br>
-                    <label>Last Name:<br>
+                    <label>Last Name (least 5 Characters)*:<br>
                         <input type="text" name="last" class="unico" required pattern="[A-Za-z]{5,10}">
                         <span class="validity"></span>
                     </label><br>
