--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -52,7 +52,7 @@
                     </label><br>
                     <label>Zip Code:<br>
                         <input type="text" name="zip" class="unico" pattern="(\d{5}([\-]\d{4})?)" required 
-                        autocomplete="shipping postal-codep"></label><br>
+                        autocomplete="shipping postal-codep" placeholder="3001"></label><br>
                     <label>Phone:<br>
                         <input type="tel" name="phone" class="unico" placeholder="0414-556-0383" required>
                     </label><br>
