--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -51,7 +51,7 @@
                         <span class="validity"></span>
                     </label><br>
                     <label>Zip Code:<br>
-                        <input type="text" name="zip" class="unico" pattern="(\d{5}([\-]\d{4})?)" required 
+                        <input type="number" name="zip" class="unico" pattern="(\d{5}([\-]\d{4})?)" required 
                         autocomplete="shipping postal-codep" placeholder="3001"></label><br>
                     <label>Phone*:<br>
                         <input type="tel" name="phone" class="unico" placeholder="0414-556-0383" required>
