--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -26,11 +26,11 @@
         <nav>
             <button onclick="toggleMenu()">&#9776;</button> 
             <ul id="mostrar" class="hide">
-              <li class="active"><a href="lazyload.html" >Home</a></li>
+              <li><a href="lazyload.html" >Home</a></li>
               <li><a href="">Preston</a></li>
               <li><a href="">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
-              <li><a href="">Storm Center</a></li>
+              <li class="active"><a href="">Storm Center</a></li>
               <li><a href="">Gallery</a></li>
             </ul>
         </nav>
