--- a/Lesson 8/stormcenter.html
+++ b/Lesson 8/stormcenter.html
@@ -120,7 +120,7 @@
                         <textarea name="user_message" placeholder="Message"></textarea>
                     </label>
                 </fieldset>
-                    <input type="submit" class="enviar" name="enviar" value="Submit">
+                    <input type="submit" class="enviar" name="enviar" value="Send">
             </form>
 
         </main>
