--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -20,7 +20,7 @@
             <div class="cards"></div>
           </main>
           <footer>
-            Your name here | BYU-Idaho | WDD 230
+            Wilker Pacheco | BYU-Idaho | WDD 230
           </footer>
 
     </body>
