--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="us-en">
+<html lang="en-us">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Table Build</title>
+        <title>Website Planning Document</title>
         <meta name="description" content="Preston Page">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
-        <link href= "css/tablebuild.css" rel= "stylesheet" >
-        
+        <link href= "css/prophets.css" rel= "stylesheet" >
     </head>
 
     <body>
-        
         <header>
             <h1>Latter-day Prophets</h1>
           </header>
@@ -20,8 +18,8 @@
             <div class="cards"></div>
           </main>
           <footer>
-            Wilker Pacheco | BYU-Idaho | WDD 230
+            Your name here | BYU-Idaho | WDD 230
           </footer>
-
+          <script src="js/prophets.js"></script>
     </body>
 </html>
