--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Website Planning Document</title>
+        <title>Prophets</title>
         <meta name="description" content="Preston Page">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
@@ -16,10 +16,18 @@
           </header>
           <main>
             <div class="cards"></div>
+            <h2></h2>
+            <p></p>
+            <img src="" alt="">
           </main>
           <footer>
             Your name here | BYU-Idaho | WDD 230
           </footer>
-          <script src="js/prophets.js"></script>
+          <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+         <script>
+             WebFont.load({google:{families: ['Ubuntu', 'sans-serif']}});
+         </script>
+
+         <script src="js/prophets.js"></script>
     </body>
 </html>
