--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="us-en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Prophets</title>
+        <title>Table Build</title>
         <meta name="description" content="Preston Page">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
-        <link href= "css/prophets.css" rel= "stylesheet" >
+        <link rel="stylesheet" href="css/prophets.css">
     </head>
 
     <body>
@@ -16,18 +16,9 @@
           </header>
           <main>
             <div class="cards"></div>
-            <h2></h2>
-            <p></p>
-            <img src="" alt="">
           </main>
           <footer>
             Your name here | BYU-Idaho | WDD 230
           </footer>
-          <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-         <script>
-             WebFont.load({google:{families: ['Ubuntu', 'sans-serif']}});
-         </script>
-
-         <script src="js/prophets.js"></script>
     </body>
 </html>
