--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -18,7 +18,7 @@
             <div class="cards"></div>
           </main>
           <footer>
-            Your name here | BYU-Idaho | WDD 230
+            Wilker Pacheco | BYU-Idaho | WDD 230
           </footer>
     </body>
 </html>
