--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -20,5 +20,6 @@
           <footer>
             Wilker Pacheco | BYU-Idaho | WDD 230
           </footer>
+          <script src="js/prophets.js"></script>
     </body>
 </html>
