--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -15,11 +15,16 @@
             <h1>Latter-day Prophets</h1>
           </header>
           <main>
-            <div class="cards"></div>
+            <div class="cards"><span id="prophets"></span><script src="js/prophets.js"></script>
+            <section id="one"></section>
+            <section id="two"></section>
+            <section id="three"></section>
+            <section id="four"></section>
+            </div>
           </main>
           <footer>
             Wilker Pacheco | BYU-Idaho | WDD 230
           </footer>
-          <script src="js/prophets.js"></script>
+          
     </body>
 </html>
