--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Table Build</title>
+        <title>Prophets</title>
         <meta name="description" content="Preston Page">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
