--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -15,8 +15,12 @@
             <h1>Latter-day Prophets</h1>
           </header>
           <main>
-            <div class="cards"><span id="prophets"></span><script src="js/prophets.js"></script>
-            <section id="one"></section>
+            <div class="cards"><script src="js/prophets.js"></script>
+            <section id="one">
+              <h2></h2>
+              <p></p>
+              <img>
+            </section>
             <section id="two"></section>
             <section id="three"></section>
             <section id="four"></section>
