--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -21,9 +21,21 @@
               <p></p>
               <img>
             </section>
-            <section id="two"></section>
-            <section id="three"></section>
-            <section id="four"></section>
+            <section id="two">
+              <h2></h2>
+              <p></p>
+              <img>
+            </section>
+            <section id="three">
+              <h2></h2>
+              <p></p>
+              <img>
+            </section>
+            <section id="four">
+              <h2></h2>
+              <p></p>
+              <img>
+            </section>
             </div>
           </main>
           <footer>
