--- a/Lesson 9/prophets.html
+++ b/Lesson 9/prophets.html
@@ -22,6 +22,11 @@
           <footer>
             Wilker Pacheco | BYU-Idaho | WDD 230
           </footer>
+          <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+         <script>
+             WebFont.load({google:{families: ['Times New Roman', 'serif']}});
+
+         </script>
           
     </body>
 </html>
