--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li>LESSON 07:<a href="https://midael1975.github.io/Lesson 7/gallery-7.html" target="_blank">Gallery Page</a></li>
       <li>LESSON 08:<a href="https://midael1975.github.io/Lesson%208/tablebuild.html" target="_blank">Table Assignment</a></li>
       <li>LESSON 08:<a href="https://midael1975.github.io/Lesson%208/stormcenter.html" target="_blank">Storm Center</a></li>
+      <li>LESSON 09:<a href="https://midael1975.github.io/Lesson%209/prophets.html" target="_blank">Prophets</a></li>
       <li>LESSON 09:<a href="index.html">Weather Site Homepage</a></li>
       <li>LESSON 10:<a href="index.html">Preston Weather Api</a></li>
       <li>LESSON 11:<a href="index.html">Weather site</a></li>
