--- a/Lesson 9/homepage.html
+++ b/Lesson 9/homepage.html
@@ -35,9 +35,14 @@
             </ul>
         </nav>
 
-        <main>
+        <h1>Towns</h1>
 
-            
+        <main>
+            <div class="home"><script src="js/home.js"></script>
+
+            </div>
+
+        
         </main>
 
         <footer>
