--- a/Lesson 9/homepage.html
+++ b/Lesson 9/homepage.html
@@ -35,10 +35,18 @@
             </ul>
         </nav>
 
-        <h1>Towns</h1>
-
         <main>
+            <div id="herosum">
+                <picture id="hero">
+                    <source srcset="images/Prestonmedium.jpg" media="(min-width: 520px) and 
+                    (max-width: 1023px)">
+                       <source srcset="images/Prestonlarge.jpg" media="(min-width: 1024px)">
+                    <img src="images/Prestonlesson7.jpg" alt="" id="primero">
+                </picture>
+            </div>
+            <h1>Towns</h1>
             <div class="home"><script src="js/home.js"></script>
+                
 
             </div>
 
