--- a/Lesson 9/homepage.html
+++ b/Lesson 9/homepage.html
@@ -30,7 +30,7 @@
               <li><a href="">Preston</a></li>
               <li><a href="">Soda Springs</a></li>
               <li><a href="">Fish Haven</a></li>
-              <li ><a href="">Storm Center</a></li>
+              <li><a href="https://midael1975.github.io/Lesson%208/stormcenter.html" target="_blank">Storm Center</a></li>
               <li><a href="">Gallery</a></li>
             </ul>
         </nav>
