--- a/Lesson 9/homepage.html
+++ b/Lesson 9/homepage.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Website Planning Document</title>
+        <title>Weather Site Homepage</title>
         <meta name="description" content="Preston Page">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
