--- a/Lesson 10/preston-10.html
+++ b/Lesson 10/preston-10.html
@@ -49,14 +49,13 @@
 
                 <section id="summary">
                 <h2 id="clima">Weather Summary</h2>
-                <p>Currently: Sunny</p>
-                <p>Wind Chill:<span id="windChill"></span> <script src="js/windChill.js"></script> °F</p>
-                <script>
-                    document.getElementById("windChill").innerHTML = windChill(48, 8);
-                </script>
-                <p>Temperature: <span id="temp">48</span>°F</p>
-                <p>Wind Speed: <span id="speed">8</span>mph</p>
-                <p>Humidity:69%</p>
+                <p>Currently:<span id="main"></span></p>
+                <p>Wind Chill:<span id="windChill"></span> °F</p>
+                
+                <p>Temperature: <span id="temp"></span>°F</p>
+                <p>Wind Speed: <span id="wind"></span>mph</p>
+                <p>Humidity:<span id="humidity"></span>%</p>
+                 <script src="js/preston10.js"></script>
                 </section>
             </div>
             
